<?xml version="1.0"?>
<package format="2">
  <name>simple_planner</name>
  <version>0.0.0</version>
  <description>The simple_planner package</description>

  <maintainer email="datld@todo.todo">datld</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>eigen</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
      <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>
</package>
